<resources>
    <string name="app_name">LEctor</string>
    <string name="tus_textos">Tus textos</string>
    <string name="tus_notas">Tus Notas</string>
    <string name="tu_cronologia">Tu Cronologia</string>
    <string name="suceso_1">Suceso 1</string>
    <string name="tus_lugares">Tus lugares</string>
    <string name="loading">Loading…</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Entra</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="crear_cuenta">Crear cuenta</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="contrase_a">Contraseña</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
</resources>
